fix: 更换快捷键为 Ctrl+S 和 Ctrl+Q

--- a/settings.html
+++ b/settings.html
@@ -131,7 +131,7 @@
         </div>
         <button id="save">Save and Apply</button>
         <div class="hint">
-            Shortcuts: Ctrl+Alt+S (Settings) | Ctrl+Alt+Q (Exit)
+            Shortcuts: Ctrl+S (Settings) | Ctrl+Q (Exit)
         </div>
     </div>
     <script>
